fix spacing

--- a/public/styles/calendar.css
+++ b/public/styles/calendar.css
@@ -71,7 +71,8 @@
     column-gap: 4px;
     flex-grow: 1;
     margin-top: 4px;
-    padding-bottom: 4px;
+    padding-top: 4px;
+    padding-bottom: 8px;
 }
 
 .day-of-week-label {
